--- a/src/assets/style/theme/d2/setting.scss
+++ b/src/assets/style/theme/d2/setting.scss
@@ -1,7 +1,8 @@
 // 主题名称
 $theme-name: 'd2';
 // 主题背景颜色
-$theme-bg-color: #ebf1f6;
+// $theme-bg-color: #ebf1f6;
+$theme-bg-color: #F5F7FA;
 // 主题背景图片遮罩
 $theme-bg-mask: rgba(#000, 0);
 
