--- a/src/assets/style/theme/register.scss
+++ b/src/assets/style/theme/register.scss
@@ -1,4 +1,8 @@
 @import '~@/assets/style/theme/theme-base.scss';
+@import '~@/assets/style/theme/element.scss';
+@import '~@/assets/style/theme/iconfont-color.scss';
+@import '~@/assets/style/theme/iconfont-svg.scss';
+@import '~@/assets/style/theme/global.scss';
 
 @import '~@/assets/style/theme/d2/index.scss';
 @import '~@/assets/style/theme/chester/index.scss';
