--- a/src/views/menu/business-manage-menu/report-respons-regist/components/report/index.scss
+++ b/src/views/menu/business-manage-menu/report-respons-regist/components/report/index.scss
@@ -20,23 +20,10 @@
       .content--form {
         transition: all 1s;
         margin-bottom: 27px;
-        .content-from-wrapper-height {
-          position: relative;
-          width: 100%;
-          height: auto;
+        .global-content-form-item-box {
+          .position_left,
           .position_right {
-            position: absolute;
-            right: 0;
-            top: 0;
-            width: 37.6%;
-            height: 330px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            // background-color: $color-text-5;
-            border-right: 1px solid $color-border-1;
-            border-bottom: 1px solid $color-border-1;
-            box-sizing: border-box;
+            height: 274px;
           }
         }
       }
