--- a/src/assets/style/theme/theme-base.scss
+++ b/src/assets/style/theme/theme-base.scss
@@ -469,6 +469,7 @@
                 // border-bottom-left-radius: 4px;
                 // border-bottom-right-radius: 4px;
                 border-radius: 6px;
+                margin-bottom: 10px;
               }
               .d2-container-ghost-bs__body {
                 flex-grow: 1;
