--- a/src/views/menu/file-bgf-menu/components-table-a/index.scss
+++ b/src/views/menu/file-bgf-menu/components-table-a/index.scss
@@ -17,7 +17,9 @@
 .increase--box {
   padding: 10px 20px;
   font-size: 16px;
-
+  background: white;
+  width: 100%;
+  border-radius: 6px;
   .increase--title {
     .increase-title--text {
       text-align: center;
