--- a/src/assets/style/theme/global.scss
+++ b/src/assets/style/theme/global.scss
@@ -40,6 +40,22 @@
 }
 
 /**
+* margin
+**/
+
+.global--plr40 {
+  margin: 0 40px;
+}
+
+.global--plr60 {
+  margin: 0 60px;
+}
+
+.global--plr115 {
+  padding: 0 115px;
+}
+
+/**
 * line
 **/
 
@@ -138,6 +154,13 @@
   align-items: center;
 }
 
+.global-column-center-end--flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+}
+
 /**
 * height
 **/
@@ -166,6 +189,7 @@
 /**
 * 自动封装表单
 **/
+
 .global-content-form-item-look,
 .global-content-form-item {
   border-left: 1px solid $color-border-1;
@@ -217,7 +241,6 @@
       position: absolute;
       top: 0;
       width: 40px;
-      height: 274px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -246,13 +269,111 @@
   }
 }
 
-
 .global-content-form-item-look {
   .content-form-wrapper {
     .content-form-wrapper-column {
       > div {
         min-height: 40px;
       }
+      .ceil-value {
+        justify-content: flex-start;
+      }
+    }
+  }
+}
+
+/**
+* 自动树形table表格
+**/
+.tree-grid--box {
+  font-size: 14px;
+  width: 100%;
+  .tree-grid--header {
+    width: 100%;
+    height: 42px;
+    background-color: $color-bg-2;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .tree-grid-header--title {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      height: 100%;
+      padding-left: 22px;
+    }
+    .tree-grid-header--item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      min-width: 600px;
+      max-width: 1000px;
+      width: 600px;
+      height: 100%;
+      .tree-grid-header--operat {
+        flex: 1;
+        width: 0;
+      }
+    }
+  }
+  .tree-grid--body {
+    width: 100%;
+    .custom-tree-node {
+      width: 100%;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 14px;
+      .custom-tree-node--box {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-right: 8px;
+        .custom-tree-node--title {
+          flex: 1;
+          display: flex;
+          align-items: center;
+          .custom-tree-node--label {
+            margin-left: 13px;
+            width: -moz-calc(100% - 30px);
+            width: -webkit-calc(100% - 30px);
+            width: calc(100% - 30px);
+          }
+        }
+        .custom-tree-node--item {
+          min-width: 600px;
+          max-width: 1000px;
+          width: 600px;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+          > div {
+            padding: 0 5px;
+          }
+          .qualified {
+            color: $color-link;
+            .el-input__inner {
+              color: $color-link;
+            }
+          }
+          .unqualified {
+            color: $color-danger;
+            .el-input__inner {
+              color: $color-danger;
+            }
+          }
+        }
+        .custom-tree-node--operat {
+          // width: 200px;
+          flex: 1;
+        }
+      }
+    }
+    .el-tree-node__content {
+      border-bottom: 1px solid $color-border-6;
+      height: 40px;
     }
   }
 }
