--- a/src/assets/style/unit/color.scss
+++ b/src/assets/style/unit/color.scss
@@ -40,6 +40,7 @@ $color-border-2: #E4E7ED;
 $color-border-3: #EBEEF5;
 $color-border-4: #F2F6FC;
 $color-border-5: rgba(220,223,230,.4);
+$color-border-6: #F1F2F4;
 
 // 边框线
 $color-line-1: #dcdfe6;
