--- a/src/views/menu/business-manage-menu/file-receive/components/engine/index.scss
+++ b/src/views/menu/business-manage-menu/file-receive/components/engine/index.scss
@@ -20,10 +20,23 @@
       .content--form {
         transition: all 1s;
         margin-bottom: 27px;
-        .content-from-column-height {
-          .position_left,
+        .content-from-wrapper-height {
+          position: relative;
+          width: 100%;
+          height: auto;
           .position_right {
-            height: 274px;
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 37.6%;
+            height: 330px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            // background-color: $color-text-5;
+            border-right: 1px solid $color-border-1;
+            border-bottom: 1px solid $color-border-1;
+            box-sizing: border-box;
           }
         }
       }
