--- a/src/views/menu/business-manage-menu/file-receive/increase-engine/index.scss
+++ b/src/views/menu/business-manage-menu/file-receive/increase-engine/index.scss
@@ -19,11 +19,18 @@
       }
       .content--form {
         transition: all 1s;
-        margin-bottom: 27px;
-        .content-from-column-height {
-          .position_left,
-          .position_right {
-            height: 274px;
+        >div {
+          height: 100%;
+        }
+        .content-form-item {
+          width: 40%;
+          height: 100%;
+          .content-form-not-set {
+            width: 80%;
+            border: 1px solid $color-border-1;
+            margin-left: 100px;
+            border-radius: 3px;
+            height: 340px;
           }
         }
       }
