业务管理一级菜单页面完成

--- a/src/assets/style/theme/element.scss
+++ b/src/assets/style/theme/element.scss
@@ -195,15 +195,19 @@
   z-index: 99999;
 }
 
-#advice-notice .el-table,
+
 #sz-advanced-query .el-table,
 #sz-table .el-table {
   color: $color-text-main !important;
 }
 
-#advice-notice .el-table th,
 #sz-advanced-query .el-table th,
 #sz-table .el-table th {
+  // border: 0 !important;
+  background-color: $color-bg-2 !important;
+}
+
+#sz-table .el-table__expanded-cell .el-table td {
   // border: 0 !important;
   background-color: $color-bg-2 !important;
 }
@@ -212,11 +216,6 @@
 #sz-table .el-table td:first-child > .cell,
 #sz-table .el-table-column--selection > .cell {
   // padding-left: 0 !important;
-}
-
-#advice-notice .el-table th:first-child > .cell,
-#advice-notice .el-table td:first-child > .cell {
-  padding-left: 5px !important;
 }
 
 .table-padding-left30#sz-table .el-table th:first-child > .cell,
@@ -229,6 +228,10 @@
   padding: 0 !important;
 }
 
+#handover-book .el-table__expanded-cell .el-table__header-wrapper {
+  height: 0;
+}
+
 #sz-table .el-table__expanded-cell .el-table {
   // padding-left: 110px !important;
 }
@@ -238,12 +241,15 @@
   padding-left: 30px !important;
 }
 
-#advice-notice th.el-table__cell,
+#sz-table .el-table__expanded-cell .el-table th > .cell,
+#sz-table .el-table__expanded-cell .el-table td > .cell {
+  padding-left: 15px !important;
+}
+
 #sz-table th.el-table__cell {
   padding: 8px 0;
 }
 
-#advice-notice td.el-table__cell,
 #sz-table td.el-table__cell {
   padding: 6px 0;
 }
@@ -264,7 +270,6 @@
 }
 
 #sz-tree-table .el-button,
-#advice-notice .el-button,
 #sz-advanced-query .delete-button--active.el-button,
 #sz-table .el-button {
   color: $color-primary;
