--- a/src/assets/style/unit/color.scss
+++ b/src/assets/style/unit/color.scss
@@ -41,6 +41,7 @@ $color-border-3: #EBEEF5;
 $color-border-4: #F2F6FC;
 $color-border-5: rgba(220,223,230,.4);
 $color-border-6: #F1F2F4;
+$color-border-7: rgba(96,98,102,.4);
 
 // 边框线
 $color-line-1: #dcdfe6;
