--- a/src/assets/style/theme/element.scss
+++ b/src/assets/style/theme/element.scss
@@ -332,7 +332,8 @@
 * el-dialog
 **/
 
-#sz-advanced-query .el-dialog__header {
+#sz-advanced-query .el-dialog__header,
+#sz-auvi-file-preview .el-dialog__header {
   border-bottom: 1px solid $color-line-2;
   height: 50px;
   padding: 0 20px;
@@ -352,6 +353,10 @@
 
 #sz-advanced-query .el-dialog__body {
   padding: 18px 20px;
+}
+
+#sz-auvi-file-preview .el-dialog__body {
+  padding: 0;
 }
 
 #sz-advanced-query .el-dialog__body .advanced-query--body {
